--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/app
-spring.datasource.username=root
-spring.datasource.password=admin
+#spring.datasource.url=jdbc:mysql://localhost:3306/app
+#spring.datasource.username=root
+#spring.datasource.password=admin
 
 #spring.datasource.url=jdbc:mysql://warehouse-mysql:3306/demo
 #spring.datasource.username=demo_user
 #spring.datasource.password=demo_pass
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #turned on to enable lazy loading
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
 
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=validate
 
 
 #spring.view.prefix: /WEB-INF/pages/
@@ -21,3 +21,6 @@ spring.jpa.hibernate.ddl-auto=validate
 #spring.mvc.view.prefix= /WEB-INF/pages/
 #spring.mvc.view.suffix=.jsp
 
+spring.thymeleaf.cache = false
+
+spring.freemarker.settings.auto_include = layout/application.ftl
