--- a/pom.xml
+++ b/pom.xml
@@ -120,9 +120,12 @@
 			<artifactId>jquery</artifactId>
 			<version>2.2.1</version>
 		</dependency>
-
-
-
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>angularjs</artifactId>
+            <version>1.4.9</version>
+            <scope>runtime</scope>
+        </dependency>
 
 	</dependencies>
 
